--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </tbody>
       </table>
       <div>
-        <label for="x">X:</label>
-        <input type="number" id="x" name="x">
-        <label for="y1">Y1:</label>
-        <input type="number" id="y1" name="y1">
-        <label for="y2">Y2:</label>
-        <input type="number" id="y2" name="y2">
+        <label for="x">วันที่:</label>
+        <input type="number" id="x" name="x"><br>
+        <label for="y1">(SBP):</label>
+        <input type="number" id="y1" name="y1"><br>
+        <label for="y2">(DBP):</label>
+        <input type="number" id="y2" name="y2"><br>
         <button onclick="addToTable()">Append</button>
         <!--<button onclick="clearTable()">Clear</button>-->
       </div>
